--- a/src/styles.scss
+++ b/src/styles.scss
@@ -159,3 +159,8 @@ a:focus {
 
 // force hide tooltip in header on ranking tool
 .ranking-tool .header-icons .tooltip { display: none; }
+
+/* IE10+ hide clear button on inputs */
+::-ms-clear {
+  display: none;
+}
